Python bevezetés tananyag kész

--- a/app/src/main/res/layout/activity_python_course00_introduction.xml
+++ b/app/src/main/res/layout/activity_python_course00_introduction.xml
@@ -1,9 +1,185 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".PythonCourse_00_IntroductionActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/introductionPy"
+                android:text="@string/intro00"
+                android:layout_marginTop="30sp"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="30sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/introToPy"
+                android:layout_below="@+id/introductionPy"
+                android:layout_marginStart="15sp"
+                android:layout_marginEnd="15sp"
+                android:layout_marginTop="10sp"
+                android:text="@string/historyPy"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/historyPy"
+                android:layout_below="@+id/introToPy"
+                android:layout_marginTop="10sp"
+                android:layout_marginStart="10sp"
+                android:layout_marginEnd="10sp"
+                android:text="@string/history"
+                android:fontFamily="sans-serif"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/PhiPy"
+                android:layout_below="@+id/historyPy"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="15sp"
+                android:text="@string/philosoPy"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textAlignment="center">
+            </TextView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/philoPy"
+                android:layout_below="@+id/PhiPy"
+                android:layout_marginStart="10sp"
+                android:layout_marginEnd="10sp"
+                android:layout_marginTop="10sp"
+                android:text="@string/elvekPy"
+                android:fontFamily="sans-serif"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/jellemzokPy"
+                android:layout_below="@+id/philoPy"
+                android:layout_marginTop="15sp"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:text="@string/jellemzok"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/easynessPy"
+                android:layout_below="@+id/jellemzokPy"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="10sp"
+                android:text="@string/easyness"
+                android:fontFamily="sans-serif"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/dynamicPy"
+                android:layout_below="@+id/easynessPy"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="10sp"
+                android:text="@string/dynamicPy"
+                android:fontFamily="sans-serif"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/paradigmPy"
+                android:layout_below="@+id/dynamicPy"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="10sp"
+                android:text="@string/paradigmPy"
+                android:fontFamily="sans-serif"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/sokoldaluPy"
+                android:layout_below="@+id/paradigmPy"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="10sp"
+                android:text="@string/sokoldalu"
+                android:fontFamily="sans-serif"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center">
+            </TextView>
+
+            <Button
+                android:id="@+id/backPythonCourseList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/sokoldaluPy"
+                android:layout_marginStart="40sp"
+                android:layout_marginTop="20sp"
+                android:layout_marginEnd="250sp"
+                android:fontFamily="@font/aldrich"
+                android:text="@string/backToJavaCourseList"
+                android:textColor="@color/white"
+                app:icon="?attr/actionModeCloseDrawable" />
+
+            <Button
+                android:id="@+id/nextCoursePython00"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/sokoldaluPy"
+                android:layout_marginStart="230sp"
+                android:layout_marginTop="20sp"
+                android:layout_marginEnd="40sp"
+                android:fontFamily="@font/aldrich"
+                android:text="@string/syntaxBtn"
+                android:textColor="@color/white"
+                app:icon="@drawable/iconnext" />
+        </RelativeLayout>
+    </ScrollView>
+</RelativeLayout>
