--- a/app/src/main/res/layout/activity_python_course01_synthax.xml
+++ b/app/src/main/res/layout/activity_python_course01_synthax.xml
@@ -1,9 +1,391 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/background"
     tools:context=".PythonCourse_01_SynthaxActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/alapokPy"
+                android:text="@string/szintaxPy"
+                android:layout_marginTop="20sp"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="30sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/szintaxisPy"
+                android:layout_below="@+id/alapokPy"
+                android:layout_marginStart="15sp"
+                android:layout_marginEnd="15sp"
+                android:layout_marginTop="15sp"
+                android:text="@string/synPy"
+                android:fontFamily="sans-serif"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/felsorolas01"
+                android:layout_below="@+id/szintaxisPy"
+                android:layout_marginTop="15sp"
+                android:layout_marginStart="10sp"
+                android:layout_marginEnd="10sp"
+                android:text="@string/variPy"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textAlignment="center">
+            </TextView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/felsorolas02"
+                android:layout_below="@+id/felsorolas01"
+                android:layout_marginStart="10sp"
+                android:layout_marginEnd="10sp"
+                android:layout_marginTop="10sp"
+                android:text="@string/valtozokPy"
+                android:fontFamily="sans-serif"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/felsorolas03"
+                android:layout_below="@+id/felsorolas02"
+                android:layout_marginStart="200sp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10sp"
+                app:drawableTopCompat="@drawable/variablespyimg">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/felsorolas04"
+                android:layout_below="@+id/felsorolas03"
+                android:layout_marginTop="10sp"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:textStyle="bold"
+                android:text="@string/typesPy"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/felsorolas05"
+                android:layout_below="@+id/felsorolas04"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="10sp"
+                android:text="@string/tipusokPy"
+                android:fontFamily="sans-serif"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/syntaxPython"
+                android:layout_below="@+id/felsorolas05"
+                android:layout_marginStart="20sp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10sp"
+                app:drawableTopCompat="@drawable/synthaxpyimg">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/felsorolas06"
+                android:layout_below="@+id/syntaxPython"
+                android:layout_marginTop="10sp"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:textStyle="bold"
+                android:text="@string/operatorsPy"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/felsorolas07"
+                android:layout_below="@+id/felsorolas06"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="10sp"
+                android:text="@string/opsPy"
+                android:fontFamily="sans-serif"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/felsorolas08"
+                android:layout_below="@+id/felsorolas07"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="10sp"
+                android:text="@string/aritmetikaiPy"
+                android:fontFamily="sans-serif"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/aritmetikaiPython"
+                android:layout_below="@+id/felsorolas08"
+                android:layout_marginStart="150sp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10sp"
+                app:drawableTopCompat="@drawable/aritmetikaipyimg">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/felsorolas09"
+                android:layout_below="@+id/aritmetikaiPython"
+                android:layout_marginTop="10sp"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:textStyle="bold"
+                android:text="@string/osszehasonlitoPy"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/felsorolas10"
+                android:layout_below="@+id/felsorolas09"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="10sp"
+                android:text="@string/hasonlitoPy"
+                android:fontFamily="sans-serif"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/hasonlitoPython"
+                android:layout_below="@+id/felsorolas10"
+                android:layout_marginStart="140sp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10sp"
+                app:drawableTopCompat="@drawable/hasonlitopyimg">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/felsorolas11"
+                android:layout_below="@+id/hasonlitoPython"
+                android:layout_marginTop="10sp"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:textStyle="bold"
+                android:text="@string/logicPy"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/felsorolas12"
+                android:layout_below="@+id/felsorolas11"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="10sp"
+                android:text="@string/logikaiPy"
+                android:fontFamily="sans-serif"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/muveletekPython"
+                android:layout_below="@+id/felsorolas12"
+                android:layout_marginStart="100sp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10sp"
+                app:drawableTopCompat="@drawable/muveletekpyimg">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/felsorolas13"
+                android:layout_below="@+id/muveletekPython"
+                android:layout_marginTop="10sp"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:textStyle="bold"
+                android:text="@string/elagazasPy"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/felsorolas14"
+                android:layout_below="@+id/felsorolas13"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="10sp"
+                android:text="@string/feltPy"
+                android:fontFamily="sans-serif"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/feltetelesPython"
+                android:layout_below="@+id/felsorolas14"
+                android:layout_marginStart="120sp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10sp"
+                app:drawableTopCompat="@drawable/elagazaspyimg">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/felsorolas15"
+                android:layout_below="@+id/feltetelesPython"
+                android:layout_marginTop="10sp"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:textStyle="bold"
+                android:text="@string/ciklusokPy"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/felsorolas16"
+                android:layout_below="@+id/felsorolas15"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="10sp"
+                android:text="@string/loopsPy"
+                android:fontFamily="sans-serif"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/forCiklusPy"
+                android:layout_below="@+id/felsorolas16"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="10sp"
+                android:text="@string/forPy"
+                android:fontFamily="sans-serif"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/ciklusForPython"
+                android:layout_below="@+id/forCiklusPy"
+                android:layout_marginStart="200sp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10sp"
+                app:drawableTopCompat="@drawable/forpyimg">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/felsorolas17"
+                android:layout_below="@+id/ciklusForPython"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="10sp"
+                android:text="@string/whilePy"
+                android:fontFamily="sans-serif"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/ciklusWhilePython"
+                android:layout_below="@+id/felsorolas17"
+                android:layout_marginStart="200sp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10sp"
+                app:drawableTopCompat="@drawable/whilepyimg">
+            </TextView>
+
+
+            <Button
+                android:id="@+id/backPythonCourseList01"
+                android:layout_width="130dp"
+                android:layout_height="50dp"
+                android:layout_below="@+id/ciklusWhilePython"
+                android:layout_marginStart="40sp"
+                android:layout_marginEnd="250sp"
+                android:fontFamily="@font/aldrich"
+                android:text="@string/backToJavaCourseList"
+                android:textColor="@color/white"
+                app:icon="?attr/actionModeCloseDrawable" />
+
+            <Button
+                android:id="@+id/nextCoursePython01"
+                android:layout_width="150dp"
+                android:layout_height="50dp"
+                android:layout_below="@+id/ciklusWhilePython"
+                android:layout_marginStart="230sp"
+                android:layout_marginEnd="40sp"
+                android:fontFamily="@font/aldrich"
+                android:text="@string/nextModulesPy"
+                android:textColor="@color/white"
+                app:icon="@drawable/iconnext" />
+        </RelativeLayout>
+    </ScrollView>
