Modulok tananyag kész

--- a/app/src/main/res/layout/activity_python_course02_modules.xml
+++ b/app/src/main/res/layout/activity_python_course02_modules.xml
@@ -1,9 +1,328 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/background"
     tools:context=".PythonCourse_02_ModulesActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/functionsPy"
+            android:text="@string/funcPy"
+            android:layout_marginTop="20sp"
+            android:fontFamily="@font/aldrich"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="30sp"
+            android:textAlignment="center">
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas01"
+            android:layout_below="@+id/functionsPy"
+            android:layout_marginTop="15sp"
+            android:layout_marginStart="10sp"
+            android:layout_marginEnd="10sp"
+            android:text="@string/fuggvenyPy"
+            android:fontFamily="@font/aldrich"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textAlignment="center">
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas02"
+            android:layout_below="@+id/felsorolas01"
+            android:layout_marginStart="10sp"
+            android:layout_marginEnd="10sp"
+            android:layout_marginTop="10sp"
+            android:text="@string/TV_20Py"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas03"
+            android:layout_below="@+id/felsorolas02"
+            android:layout_marginStart="100sp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10sp"
+            app:drawableTopCompat="@drawable/fuggvenypyimg">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/fuggvenyPy"
+            android:layout_below="@+id/felsorolas03"
+            android:layout_marginStart="10sp"
+            android:layout_marginEnd="10sp"
+            android:layout_marginTop="10sp"
+            android:text="@string/greetPy"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas04"
+            android:layout_below="@+id/fuggvenyPy"
+            android:layout_marginTop="10sp"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:textStyle="bold"
+            android:text="@string/callFuncPy"
+            android:fontFamily="@font/aldrich"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas05"
+            android:layout_below="@+id/felsorolas04"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="10sp"
+            android:text="@string/paramsPy"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/greetPython"
+            android:layout_below="@+id/felsorolas05"
+            android:layout_marginStart="220sp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10sp"
+            app:drawableTopCompat="@drawable/grretpyimg">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/eredmenyGreetPy"
+            android:layout_below="@+id/greetPython"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:text="@string/outputPy"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas06"
+            android:layout_below="@+id/eredmenyGreetPy"
+            android:layout_marginTop="15sp"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:textStyle="bold"
+            android:text="@string/modulesPy"
+            android:fontFamily="@font/aldrich"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas07"
+            android:layout_below="@+id/felsorolas06"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="10sp"
+            android:text="@string/modulokPy"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/modulPython"
+            android:layout_below="@+id/felsorolas07"
+            android:layout_marginStart="100sp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10sp"
+            app:drawableTopCompat="@drawable/modulpyimg">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/modulPeldaPy"
+            android:layout_below="@+id/modulPython"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="10sp"
+            android:text="@string/greetingModulPy"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas09"
+            android:layout_below="@+id/modulPeldaPy"
+            android:layout_marginTop="15sp"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:textStyle="bold"
+            android:text="@string/importPy"
+            android:fontFamily="@font/aldrich"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/importPy"
+            android:layout_below="@+id/felsorolas09"
+            android:layout_marginStart="130sp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10sp"
+            app:drawableTopCompat="@drawable/importpyimg">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/modulPelda1Py"
+            android:layout_below="@+id/importPy"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="10sp"
+            android:text="@string/importPy2"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas12"
+            android:layout_below="@+id/modulPelda1Py"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="10sp"
+            android:text="@string/importModulPy"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/muveletekPython"
+            android:layout_below="@+id/felsorolas12"
+            android:layout_marginStart="100sp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10sp"
+            app:drawableTopCompat="@drawable/fromimportpyimg">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas13"
+            android:layout_below="@+id/muveletekPython"
+            android:layout_marginTop="10sp"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:textStyle="bold"
+            android:text="@string/beepitettPy"
+            android:fontFamily="@font/aldrich"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas14"
+            android:layout_below="@+id/felsorolas13"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:layout_marginTop="10sp"
+            android:text="@string/beepitettModulokPy"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/mathPython"
+            android:layout_below="@+id/felsorolas14"
+            android:layout_marginStart="150sp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10sp"
+            app:drawableTopCompat="@drawable/mathpyimg">
+        </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/felsorolas15"
+            android:layout_below="@+id/mathPython"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:text="@string/negyzetgyokPy"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center">
+        </TextView>
+
+        <Button
+            android:id="@+id/backPythonCourseList01"
+            android:layout_width="130dp"
+            android:layout_height="50dp"
+            android:layout_below="@+id/felsorolas15"
+            android:layout_marginStart="40sp"
+            android:layout_marginEnd="250sp"
+            android:layout_marginTop="20sp"
+            android:fontFamily="@font/aldrich"
+            android:text="@string/backToJavaCourseList"
+            android:textColor="@color/white"
+            app:icon="?attr/actionModeCloseDrawable" />
+
+        <Button
+            android:id="@+id/nextCoursePython01"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:layout_below="@+id/felsorolas15"
+            android:layout_marginStart="230sp"
+            android:layout_marginEnd="40sp"
+            android:layout_marginTop="20sp"
+            android:fontFamily="@font/aldrich"
+            android:text="@string/nextModulesPy"
+            android:textColor="@color/white"
+            app:icon="@drawable/iconnext" />
+    </RelativeLayout>
+</ScrollView>
